--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Random Restaurant Generator</string>
-    <string name="action_settings">Settings</string>
+    <string name="aboutText">Random Restaurant Generator is an open source Android application that picks a restaurant for you based on your location. The source code can be found below.</string>
+    <string name="license">License: MIT</string>
 
 </resources>
