Update app to version 1.1
 - Generate button signals to the user the query is loading when clicked
 - Modify search bar to a persistent search bar inside tab bar
 - Filter box now hidden unless activated from persistent search bar
 - AsyncTask now run inside a thread pool for parallelization
 - Refactor AsyncTask to be smaller, modular
 - Reuse OAuth requests rather than creating new ones each query
 - Two queries are run sequentially for more restaurant results
 - Improve permission handling for API 23
 - Update libraries
 - Saved List of restaurants is now persistent; stored in SQLite database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Random Restaurant Generator</string>
     <string name="aboutText">Random Restaurant Generator is an open source Android application that picks a restaurant for you based on your location. The source code can be found below.</string>
     <string name="license">License: MIT</string>
+    <string name="filter_hint">(Optional) Enter any filter, e.g. vegetarian, bbq, sushi</string>
+    <string name="string_button_text_generate">GENERATE</string>
+    <string name="string_button_text_loading">LOADING…</string>
+    <string name="string_empty_saved_list">You don\'t have restaurants added to your Saved List.</string>
 
 </resources>
