For release version 1.3  - Upgrade to Yelp Fusion API (v3)  - Upgrade to latest libraries and SDK  - Add price filter, still needs to be implemented  - Add color to text of restaurant card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Random Restaurant Generator</string>
     <string name="aboutText">Random Restaurant Generator is an open source Android application that picks a restaurant for you based on your location. The source code can be found below.</string>
     <string name="license">License: MIT</string>
-    <string name="filter_hint">(Optional) Enter any filter, e.g. vegetarian, bbq, sushi</string>
+    <string name="filter_hint">Categories e.g. vegan, sushi, bbq</string>
     <string name="string_button_text_generate">GENERATE</string>
     <string name="string_button_text_loading">LOADING…</string>
     <string name="string_empty_saved_list">You don\'t have any restaurants saved.</string>
@@ -19,5 +19,7 @@
     <string name="string_location_permission_required">Location permission are required to use GPS.</string>
     <string name="string_location_perm_rationale">Location permissions have been denied. Please enable them manually in settings.</string>
     <string name="string_location_perm_manual">Location permissions denied. Please enter location manually.</string>
+    <string name="string_price_range">Price range</string>
+    <string name="string_filter_msg">Optionally enter your filter categories and price range</string>
 
 </resources>
