--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,10 @@
     <string name="string_location_perm_manual">Location permissions denied. Please enter location manually.</string>
     <string name="string_price_range">Price range</string>
     <string name="string_filter_msg">Optionally enter your filter categories and price range</string>
+    <string name="title_settings_dialog">Permissions Required</string>
+    <string name="string_one_dollar">$</string>
+    <string name="string_two_dollar">$$</string>
+    <string name="string_three_dollar">$$$</string>
+    <string name="string_four_dollar">$$$$</string>
 
 </resources>
