--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,15 @@
     <string name="string_location_perm_rationale">Location permissions have been denied. Please enable them manually in settings.</string>
     <string name="string_location_perm_manual">Location permissions denied. Please enter location manually.</string>
     <string name="string_price_range">Price range</string>
-    <string name="string_filter_msg">Optionally enter your filter categories, price range, and time restaurants are open</string>
+    <string name="string_filter_msg">Optional filter settings</string>
     <string name="title_settings_dialog">Permissions Required</string>
     <string name="string_one_dollar">$</string>
     <string name="string_two_dollar">$$</string>
     <string name="string_three_dollar">$$$</string>
     <string name="string_four_dollar">$$$$</string>
+    <string name="string_filter_by_price_range">Filter by price range</string>
+    <string name="string_open_at_time">Open at time</string>
+    <string name="string_open_at">Open At</string>
+    <string name="string_any_time">Any time</string>
 
 </resources>
